--- a/styles/new-year-new-me.css
+++ b/styles/new-year-new-me.css
@@ -7,3 +7,30 @@
     color: #010a06d3;
     text-align: right;
 }
+/* -----------My failures of previous year---------- */
+#My failures of previous year{
+    padding: 80px 0;
+    color: #ababab;
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.My failures of previous year-col-1{
+    flex-basis: 35%;
+}
+.My failures of previous year-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+}
+.My failures of previous year-col-2{
+    flex-basis: 60%;
+}
+.sub-tittle{
+    color:black;
+}
+#luis p{
+    color: black;
+    font-size: smaller;
+}
