--- a/styles/new-year-new-me.css
+++ b/styles/new-year-new-me.css
@@ -39,8 +39,13 @@
 }
 .My failures of previous year-col-2{
     flex-basis: 60%;
-    text-align: justify;
-    padding-bottom: 50%;
+    
+    color: black;
+    font-size: 18px;
+    font-weight: 35px;
+    margin-bottom: 30px;
+    text-align: center;
+
 }
 .sub-tittle{
     color:black;
@@ -49,4 +54,37 @@
     color: black;
     font-size: smaller;
     justify-content: space-evenly;
+}
+
+/* My plans style */
+.My{
+    margin-top: 130px;
+
+}
+.section-title{
+    color: black;
+    font-size: 18px;
+    font-weight: 35px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+.skills-container{
+    display: flex;
+    gap: 80px;
+
+}
+.skill{
+    background:white ;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-description{
+    color: #737272;
 }
